--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Billgate MEDEWOU</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/thecodesec">TheOneBeat</a>.
   </div>
   <script>
     let burger =document.querySelector('.burger');
